src/test/deca/syntax/invalid/created/class/decl_met_cbrace_missing.deca
// Description :
//    decl class, decl méthode } manquant
//
// Resultats :
//		Syntaxe error

class A {
	int a() {
	
}